# ivysearch

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/configuration/: index_info.rs  mod.rs  root_sites.rs
src/crawling/: crawler.rs
src/indexing/: graph_store.rs  index_store.rs  mod.rs  wikipedia_index.rs
src/parsing/: images.rs  keywords.rs  links.rs  mod.rs
src/website/: index.rs  lucky.rs  mod.rs  results.rs  routes.rs
webui/: index.html
webui/templates/: results.html
